Release Note

* current
  * sending sourceSite to the pilot
  * UnsupportedOperation as fatal 
  * channged getJob to ignore fairshare for pmerge
  * registering LB info to log
  * changed for jobName
  * added recordRetryHistory in insertNewJob
  * filling outPandaID
  * using rucio API for file registration
  * fixed rebro for jobDef=0
  * fixed rebro for defined
  * changed TA to take secondary volume into account
  * fixed TA for dataset aggregation
  * fixed reassignSite
  * added increaseRamLimitJEDI
  * fixed lockJobsForReassign
  * added killUnfinishedJobs
  * fixed retryJob for pseudo_input
  * fixed cyclic import in panda_config
  * fixed for UNDEFINED in jobReport.json
  * sending prodDBlocks to the pilot
  * changed updateJob to avoid row lock contantation
  * setting subJobStatus to cancelled ES jobs
  * extracting # of events from json
  * fixed getFreeDiskSize in PD2P
  * added retry for ES merge when ERR_ESMERGERECOVERABLE
  * fixed getScriptOfflineRunning for did
  * fixed killJob for ES
  * chnaged Setupper for InvalidRSEExpression
  * changed Adder to extract important DDM error messages
  * setting lifetime to _dis
  * added throttled
  * changed for originpandaid
  * changed event-picking to work with non deterministic URLs
  * introduced EventServiceLastUnprocessed
  * added reqID
  * fixed increaseAttemptNr to increase max attempt for secondary datasets
  * fixed to increment nFilesUsed when merging is killed before merge generation
  * added protection against orphaned merge jobs
  * using rucio api for _dis
  * fixed event-picking for rucio
  * fixed DDM for unicode
  * introduced timeout for starting
  * added increaseAttemptNr
  * fixed checkRucioDataset
  * fixed method emulator in DDM
  * changed to work with rucio containers 
  * cleanup to work without specialHandling=ddm:rucio
  * added protection against empty RSE Expression
  * using nevents=null for log files
  * ReplicaNotFound as a fatal error